# Actix_GraphQl_API

./: Cargo.toml  README.md
src/: graphql_schema.rs  main.rs
src/graphql_schema/: db_connector.rs
