[package]
name = "project"
version = "0.1.0"
authors = ["MedAmineFouzai <54685665+MedAmineFouzai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    actix-web = "1.0.0"
    futures = "0.1"
    juniper = "0.13.1"
    serde_json = "1.0"
    serde="1.0.117"
    mongodb = "1.0.0"
    tokio = "0.2.22"